frontend/test/should_fail/negative_005.grg
test t {
	alternative {
		Something {			
			negative {		
				negative {
					patternpath;
				}
			}
		}
		Empty {
		}
	}
}
